# aimm

./: .doit.db  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.rst  Dockerfile  MANIFEST.in  README.rst  VERSION  dodo.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docs.yaml  main.yaml
aimm/: common.py  json_schema_repo.json  version.py
aimm/client/: repl.py
aimm/plugins/: __init__.py  common.py  decorators.py  execute.py
aimm/server/: __main__.py  common.py  engine.py  main.py  mprocess.py  runners.py
docs/: conf.py  getting_started.rst  index.rst  plugins.rst
docs/clients/: index.rst  repl.rst
docs/server/: backend.rst  engine.rst  index.rst  server.drawio
examples/0001/: Dockerfile  Iris.ipynb  aimm.yaml  readme.rst  requirements.txt
examples/0002/: .gitignore  Dockerfile  hat.sh  readme.rst  requirements.txt
examples/0003/: .gitignore  Dockerfile  README.md  aimm.sh_deprecated  dodo.py  install.sh  package-lock.json  package.json  requirements.txt  run.sh  webpack.config.js
examples/0004/: install.sh  run.sh
examples/0005-combined/: README.md  kaggle-unsupervised-anomaly-detection.ipynb  package-lock.json  package.json
examples/deprecaed-0004/: .gitignore  README.md  requirements.txt
examples/deprecated-0003/: README.md  install.sh  package.json  run.sh
schemas_json/: plugins.yaml
schemas_json/server/: engine.yaml  hat.yaml  main.yaml
test/: conftest.py
test/test_sys/: test_event.py  test_event_integration.py  test_repl.py  test_runners.py
test/test_unit/: test_plugins.py
(+134 files in other folders)
